--- a/TeX/Chordbook_Extended/chordbook_extended.cls
+++ b/TeX/Chordbook_Extended/chordbook_extended.cls
@@ -1,8 +1,8 @@
 % vim: ft=tex
 
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesClass{chordbook}
-\LoadClass[12pt,a4paper,titlepage,twoside]{scrartcl}
+\ProvidesClass{../TeX/Chordbook_Extended/chordbook_extended}
+\LoadClass[12pt,landscape,a4paper,twoside]{article}
 
 \newcommand\myauthor{JoSh}
 \title{Chordbook}
