--- a/TeX/Chordbook_Extended/chordbook_extended.cls
+++ b/TeX/Chordbook_Extended/chordbook_extended.cls
@@ -34,7 +34,7 @@
 % Header
 \RequirePackage{fancyhdr}
 \pagestyle{fancy}
-\fancyhead[OL,ER]{\textbf{\myauthor's Chordbook \the\year}\\}
+\fancyhead[OL,ER]{\textbf{\myauthor's Extended Chordbook \the\year} \\ \textit{\rightmark}}
 \fancyhead[EL,OR]{\textbf{Seite \thepage} \\ \textit{\leftmark}}
 
 \setlength{\oddsidemargin}{0mm}
