--- a/TeX/commands.tex
+++ b/TeX/commands.tex
@@ -20,3 +20,19 @@
 % change rightmark to display the song title. this does not work for each first
 % song in a new song section, though
 \renewcommand{\chorusmark}{\markright{\thesongnum{} \songtitle}}
+
+%
+\newcommand{\fakesection}[1]{%
+  \par\refstepcounter{section}% Increase section counter
+  \sectionmark{#1}% Add section mark (header)
+  \addcontentsline{toc}{section}{\protect\numberline{\thesection}#1}% Add section to ToC
+  % Add more content here, if needed.
+}
+
+%
+\newcommand{\fakesubsection}[1]{%
+  \par\refstepcounter{subsection}% Increase subsection counter
+  \subsectionmark{#1}% Add subsection mark (header)
+  \addcontentsline{toc}{subsection}{\protect\numberline{\thesubsection}#1}% Add subsection to ToC
+  % Add more content here, if needed.
+}
